[package]
name = "RScanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
futures = "0.3"
colored = "2"
anyhow = "1"

[[bin]]
name = "RScanner"
path = "edge/proxies-main.rs"
