[package]
name = "RScanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "RScanner"
path = "edge/proxies-main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
futures = "0.3"
colored = "2.0"
