[package]
name = "RScanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "RScanner"
path = "edge/proxies-main.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
colored = "2.0"
chrono-tz = "0.8"
serde_json = "1.0"
native-tls = "0.2"
tokio-native-tls = "0.3"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
